...
                shape = RectangleShape,
                colors = ButtonDefaults.buttonColors(
                    containerColor = Color(0xFFEADDFF),
                    contentColor = Black
                ),
                modifier = Modifier
                    .testTag("ActivateChatButton")
                    .align(CenterHorizontally)
                    .fillMaxWidth()
                    .padding(horizontal = 16.dp, vertical = 22.dp),
                onClick = {
                    launchIntent(UserIntent.OpenChat)
                }
...
}




data class ChatMessage(
    val message: String = "Hola! Soy un agente virtual, en que puedo ayudarte?",
    val isAgent: Boolean = true,
    val time: String = "Livechat ${Date().toLocaleString()}",
    val language: String = "en"
)
