...
                .fillMaxWidth()
                .background(Color.LightGray)
                .aspectRatio(1f),
        )
        OutlinedTextField(
            modifier = Modifier
                .testTag("consultarIncidenteEdittext")
                .fillMaxWidth(),
            placeholder = {
                Text(
                    text = stringResource(R.string.search_incident_query),
                )
            },
...
                    if (validate(query)) {
                        launchIntent(SearchIncident(query))
                        return@Button
                    }
                },
                modifier = Modifier
                    .testTag("SearchIncidentButton")

            ) {
                Text(
                    text = stringResource(R.string.search_incident),
                )
            }
...
