...

            ABCallTheme {
                Surface(
                    modifier = Modifier.fillMaxSize(),
                    color = MaterialTheme.colorScheme.background,
                ) {
                    MainScreen(
                        state = state,
                        event = event,
                        isInternetAvailable = isInternetAvailable,
                        launchIntent = { userIntent ->
                            viewModel.onUserIntent(userIntent)
                        },
...
            OffLineBanner {
                offlineBannerVisible = false
            }
        }
        var showSplash by remember { mutableStateOf(true) }
        if (showSplash) {
            SplashScreen(
                continueNavigation = {
                    showSplash = false
                }
            )
        }
        else {
...
